Created attachment 46282 [details] File that have displaying problem This attached docx document does not show text and images in LO 3.3.2.3. Only frames borders are displayed. Looking in the docx with mc (mode zip extract), we can see that this file contains text and two wmf images.
I have tested this bug on my computer. Yes I can confirm the bug exactly as described. In LO, I see only two empty boxes and another box within the first one. Opened in Word 2003 (with DOCX import filters), I see the greeting card with images for a 30th birthday :-) System: Ubuntu 10.10, Gnome2, LibreOffice 3.3.2 PPA, German language environment
Might be related to or DUP of Bug 32170 - FILEOPEN Opened DOCX-file is empty Bug 36862 - Docx file displays nothing Bug 33072 - .docx import - graphics missing (JPEG), wordart messed up I do a cleanup and assign all "DOCX missing contents" bugs to Cédirc @Cédirc Please feel free to reassign if it's not your area!
This bug is still present in LO 3.4.4 final.
I think in 4.5.0 it looks better: All elements seem to be there, only the layout (box width/positions) is wrong. I wonder whether last commit for bug 34617 has fixed that as well. [Compared only with Word 2003 + compatibility package.]
(In reply to comment #4) > I think in 4.5.0 it looks better: All elements seem to be there, only the > layout (box width/positions) is wrong. I wonder whether last commit for bug > 34617 has fixed that as well. [Compared only with Word 2003 + compatibility > package.] No, the layout is still broken with master.
This is (primarily) a Writer issue, therefore changed 'Component' field accordingly.
*** Bug 55456 has been marked as a duplicate of this bug. ***
Eilidh McAdam committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=942b184d81f129309072ca973fc274c40bac67b8 fdo#36791 Added cases for unsupported VML commands The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Created attachment 86831 [details] Comparison on Word 2010 and LibreOffice 4.1.1.2 Problem persists with LibreOffice 4.1.1.2
This bug is confirmed but unowned - back to NEW.
Problem persists with LibreOffice 4.4.0 from master. Seems like there are multiple problems here: import of text box, import of WMF, front(back order of pictures. I'll add 2 docx with some elements deleted.
Created attachment 108641 [details] Only pictures with border saved in Word 2010
Created attachment 108642 [details] Only text box with border saved in Word 2010
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present on a currently supported version of LibreOffice (5.0.4 or later) https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the version of LibreOffice and your operating system, and any changes you see in the bug behavior the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a short comment that includes your version of LibreOffice and Operating System Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to "inherited from OOo"; 4b. If the bug was not present in 3.3 - add "regression" to keyword Feel free to come ask questions or to say hello in our QA chat: http://webchat.freenode.net/?channels=libreoffice-qa Thank you for your help! -- The LibreOffice QA Team This NEW Message was generated on: 2015-12-20
This issue is still present in 5.0.4.
This issue is still present in 5.1.0.1. Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Created attachment 125687 [details] Screenshot of the new test CONFIRMED ON: Versione: 5.2.0.0.beta2 Build ID: ae12e6f168ba39f137fc110174a37c482ce68fa4 Thread CPU: 2; Versione SO: Linux 4.1; Resa interfaccia: predefinito; Versione locale: it-IT (it_IT.UTF-8) OS: openSUSE Leap 42.1 (x86_64) Version: 5.3.0.0.alpha0+ Build ID: a8bd44573b75d1399257d6f5d052611439607189 CPU Threads: 2; OS Version: Linux 4.1; UI Render: default; TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-06-13_23:46:49 Locale: it-IT (it_IT.UTF-8) OS: openSUSE Leap 42.1 (x86_64)
it seems the first attachment is corrupted when trying to open it in MSOffice 2010 after a roundtrip. Reported in bug 103982
This is one of those "document based" bugs that's not properly triaged in order to have "issue based" bugs. It would be nice to close this one and split other issues, separately image and text box. Until then, decreasing importance.
bug still present in LO 6.1.1.1
still repro in Version: 6.3.0.0.alpha0+ Build ID: d81a11220d76eeecac80b27b25a4576b6e78210b CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; Locale: ru-RU (ru_RU); UI-Language: en-US Calc: threaded
Created attachment 156023 [details] Office 365 on MacOS So interestingly, on Office 365 for MacOS, the wrong font is used also.