fdo#36791 Added cases for unsupported VML commands

Fixes crash on two-character VML path commands.

Change-Id: Ia1abca37352b1feb20a41b4bac68ecb9e40ed8dc